WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187418
WebDriver: hang in Selenium test alerts_tests.py::testShouldHandleAlertOnPageBeforeUnload
https://bugs.webkit.org/show_bug.cgi?id=187418
Summary
WebDriver: hang in Selenium test alerts_tests.py::testShouldHandleAlertOnPage...
Blaze Burg
Reported
2018-07-06 15:26:05 PDT
This test does not seem to be spec-conformant (beforeunload alerts should be dismissed automatically), but it shouldn't hang either.
Attachments
Patch
(3.01 KB, patch)
2018-07-06 15:33 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-07-06 15:26:29 PDT
<
rdar://problem/41909520
>
Blaze Burg
Comment 2
2018-07-06 15:33:48 PDT
Created
attachment 344467
[details]
Patch
WebKit Commit Bot
Comment 3
2018-07-06 16:11:09 PDT
Comment on
attachment 344467
[details]
Patch Clearing flags on attachment: 344467 Committed
r233600
: <
https://trac.webkit.org/changeset/233600
>
WebKit Commit Bot
Comment 4
2018-07-06 16:11:10 PDT
All reviewed patches have been landed. Closing bug.
Blaze Burg
Comment 5
2018-07-09 09:30:42 PDT
Committed
r233641
: <
https://trac.webkit.org/changeset/233641
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug